TestResults.txt
Username (not for points): rjstrd
Assign_test.cpp: pass
Back_test.cpp: pass
Clear_test.cpp: pass
CopyConstructor_test.cpp: pass
Empty_test.cpp: pass
Erase_test.cpp: pass
Front_test.cpp: pass
Insert_test.cpp: pass
OpEqual_test.cpp: In file included from hw/rjstrd/MyList.h:112,
                 from unit_tests/OpEqual_test.cpp:3:
hw/rjstrd/MyList.hpp: In instantiation of ‘MyList<T>& MyList<T>::operator=(const MyList<T>&) [with T = int]’:
unit_tests/OpEqual_test.cpp:15:17:   required from here
hw/rjstrd/MyList.hpp:47:17: error: passing ‘const MyList<int>’ as ‘this’ argument discards qualifiers [-fpermissive]
   47 |   if(source.size() == 0)
      |      ~~~~~~~~~~~^~
hw/rjstrd/MyList.hpp:271:5: note:   in call to ‘int MyList<T>::size() [with T = int]’
  271 | int MyList<T>::size()
      |     ^~~~~~~~~

PopBack_test.cpp: pass
PopFront_test.cpp: pass
PushBack_test.cpp: pass
PushFront_test.cpp: pass
Remove_test.cpp: pass
Reverse_test.cpp: pass
Size_test.cpp: pass
Username accurate (0 good, 1 bad): 0
Bytes definitely lost (memory leak) (0 is perfect): In file included from hw/rjstrd/MyList.h:112,
                 from mem_test/mem_test.cpp:2:
hw/rjstrd/MyList.hpp: In instantiation of ‘MyList<T>& MyList<T>::operator=(const MyList<T>&) [with T = int]’:
mem_test/mem_test.cpp:13:17:   required from here
hw/rjstrd/MyList.hpp:47:17: error: passing ‘const MyList<int>’ as ‘this’ argument discards qualifiers [-fpermissive]
   47 |   if(source.size() == 0)
      |      ~~~~~~~~~~~^~
hw/rjstrd/MyList.hpp:271:5: note:   in call to ‘int MyList<T>::size() [with T = int]’
  271 | int MyList<T>::size()
      |     ^~~~~~~~~

